--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "crazybooot/base64-validation",
-  "description": "Laravel validators for base64 encoded files",
+  "name": "donicom/base64-validation",
+  "description": "Porting to Lumen of Laravel validators for base64 encoded files",
   "keywords": [
     "base64",
     "validation",
@@ -8,31 +8,23 @@
     "encoded",
     "images",
     "download",
-    "laravel"
+    "lumen"
   ],
   "authors": [
     {
-      "name": "crazybooot",
-      "email": "crazybooot@gmail.com"
+      "name": "donicom"
     }
   ],
   "license": "MIT",
   "minimum-stability": "dev",
   "require": {
     "php": "^7.1",
-    "laravel/framework": "^5.5|^6.0|^7.0|^8.0"
+    "laravel/lumen-framework": "^6.0|^7.0|^8.0"
   },
   "autoload": {
     "psr-4": {
       "App\\": "app/",
       "Crazybooot\\Base64Validation\\": "/src"
-    }
-  },
-  "extra": {
-    "laravel": {
-      "providers": [
-        "Crazybooot\\Base64Validation\\Providers\\ServiceProvider"
-      ]
     }
   }
 }
