Porting to Lumen

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,11 @@
       "App\\": "app/",
       "Crazybooot\\Base64Validation\\": "/src"
     }
-  }
+  },
+  "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/donicom/base64-validation"
+        }
+    ]
 }
